--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "mongodb": "^3.0.0-rc0",
     "rxjs": "^5.4.1",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
